snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.jar.sha1
9765db58672b7bac302ad3fe45a00cb5d882bd03